PerformanceObserver should work with 'type' and not just `entryTypes` https://bugs.webkit.org/show_bug.cgi?id=209216

Patch by Rob Buis <rbuis@igalia.com> on 2020-07-28
Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

Add po-observe-type.any.html and po-observe-type.any.worker.html tests and
update improved test expectations.

* web-platform-tests/performance-timeline/performanceobservers.js: Added.
(findMatch):
(checkEntries):
(wait):
(checkSorted):
* web-platform-tests/performance-timeline/po-observe-type.any-expected.txt: Added.
* web-platform-tests/performance-timeline/po-observe-type.any.html: Added.
* web-platform-tests/performance-timeline/po-observe-type.any.js: Added.
(test):
(async_test):
* web-platform-tests/performance-timeline/po-observe-type.any.worker-expected.txt: Added.
* web-platform-tests/performance-timeline/po-observe-type.any.worker.html: Added.
* web-platform-tests/resource-timing/buffered-flag.any-expected.txt:
* web-platform-tests/resource-timing/buffered-flag.any.worker-expected.txt:
* web-platform-tests/resource-timing/object-not-found-adds-entry-expected.txt:
* web-platform-tests/user-timing/buffered-flag.any-expected.txt:
* web-platform-tests/user-timing/buffered-flag.any.worker-expected.txt:

Source/WebCore:

Add support for 'type' attribute as specified here [1].

Tests: imported/w3c/web-platform-tests/performance-timeline/po-observe-type.any.html
       imported/w3c/web-platform-tests/performance-timeline/po-observe-type.any.worker.html

[1] https://w3c.github.io/performance-timeline/#dom-performanceobserverinit

* page/PerformanceObserver.cpp:
(WebCore::PerformanceObserver::observe):
* page/PerformanceObserver.h:
* page/PerformanceObserver.idl:

LayoutTests:

Adjust test to be aligned with the specification and skip
tests that time out.

* TestExpectations:
* performance-api/performance-observer-api-expected.txt:
* performance-api/resources/observer-api.js:

Canonical link: https://commits.webkit.org/227705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265001 268f45cc-cd09-0410-ab3c-d52691b4dbfc